--- a/src/scss/critical.scss
+++ b/src/scss/critical.scss
@@ -4,6 +4,9 @@
 @import 'utilities/flow';
 @import 'utilities/site-wrap';
 @import 'utilities/visually-hidden';
+@import 'utilities/wrapper';
 
 // import blocks
 @import 'blocks/skip-link';
+@import 'blocks/button';
+@import 'blocks/nav';
