--- a/src/scss/blocks/_skip-link.scss
+++ b/src/scss/blocks/_skip-link.scss
@@ -1,7 +1,7 @@
 .skip-link {
   position: absolute;
-  top: get-size('400');
-  left: get-size('400');
+  top: map.get($size-scale, '400');
+  left: map.get($size-scale, '400');
   z-index: 99;
 
   // @extends should be used with care, but this is a great example of them being hella useful
