--- a/src/scss/critical.scss
+++ b/src/scss/critical.scss
@@ -1,10 +1,16 @@
+// use
+@use 'sass:map';
+
+@import 'config';
 @import 'reset';
+@import 'dracula';
 
 // import utilities
 @import 'utilities/flow';
 @import 'utilities/site-wrap';
 @import 'utilities/visually-hidden';
 @import 'utilities/wrapper';
+@import 'utilities/radius';
 
 // import blocks
 @import 'blocks/skip-link';
