--- a/src/_includes/partials/page-header.html
+++ b/src/_includes/partials/page-header.html
@@ -1,6 +1,6 @@
 <div class="page-header">
   <div class="[ wrapper ] [ flow ]">
-    <h1 class="[ page-header_heading ] [ headline ]" data-highlight="primary">
+    <h1 class="[ page-header_heading ]" data-highlight="primary">
       {{ pageHeaderTitle }}
     </h1>
     {% if pageHeaderSummary %}
