Work on post layout, some other layouts and things

--- a/src/_includes/layouts/page.html
+++ b/src/_includes/layouts/page.html
@@ -1,7 +1,9 @@
 {% extends "layouts/base.html" %}
 
 {% set pageHeaderTitle = title %} 
-{% set pageHeaderSummary = summary %}
+{% if not pageHeaderSummary %}
+  {% set pageHeaderSummary = summary %}
+{% endif %}
 {# {% set pageCriticalStyles = ['css/page.css'] %}  #}
 
 {% block content %}
