--- a/src/_includes/partials/nav.html
+++ b/src/_includes/partials/nav.html
@@ -1,4 +1,4 @@
-<div class="[ site-head ] [ wrapper ]">
+<div class="[ site-head ]">
   <nav class="[ nav ]" aria-label="Primary">
     <ul class="nav_list">
       {% for item in nav.items %}
