--- a/src/_includes/partials/page-header.html
+++ b/src/_includes/partials/page-header.html
@@ -4,7 +4,7 @@
       {{ pageHeaderTitle }}
     </h1>
     {% if pageHeaderSummary %}
-    <div class="[ page-header_summary ] [ measure-long ]">
+    <div class="[ page-header_summary ]">
       {{ pageHeaderSummary | safe }}
     </div>
     {% endif %}
