--- a/src/_includes/layouts/post.html
+++ b/src/_includes/layouts/post.html
@@ -2,7 +2,7 @@
 {% set pageHeaderSummary %}
   <p class="page-header_summary_item"><time datetime="{{ date }}" class="page-header_summary_date">{{ date | dateFilter }}</time></p>
   <blockquote class="page-header_summary_item">{{ summary }}</blockquote>
-  <p>tags: {{ tags.join(", ") }}</p>
+  <p>tags: {{ tags | tagsFilter }}</p>
 {% endset %}
 
 {% extends "layouts/page.html" %}
