Syntax highlighting and Python notes

--- a/src/scss/dracula.scss
+++ b/src/scss/dracula.scss
@@ -11,6 +11,7 @@
    background: none;
    text-shadow: 0 1px rgba(0, 0, 0, 0.3);
    font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+   font-size: map.get($size-scale, '400');
    text-align: left;
    white-space: pre;
    word-spacing: normal;
@@ -28,10 +29,10 @@
  
  /* Code blocks */
  pre[class*="language-"] {
-   padding: 1em;
+   padding: map.get($size-scale, '500');
    margin: .5em 0;
    overflow: auto;
-   border-radius: 0.3em;
+   @extend .radius;
  }
  
  :not(pre) > code[class*="language-"],
