--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -39,6 +39,8 @@ body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Remove list styles on ul, ol elements with a class attribute */
