--- a/src/_includes/partials/nav.html
+++ b/src/_includes/partials/nav.html
@@ -4,7 +4,7 @@
       {% for item in nav.items %}
       <li>
         <a
-          href="{{ item.url }}"
+          href="{{site.url}}{{ item.url }}"
           class="nav_link"
           {{
           helpers.getLinkActiveState(item.url,
